RESOLVED FIXED65690
Background Does Not Scale Correctly with Page
https://bugs.webkit.org/show_bug.cgi?id=65690
Summary Background Does Not Scale Correctly with Page
Fady Samuel
Reported 2011-08-04 09:04:20 PDT
Background Does Not Scale Correctly with Page
Attachments
Patch (5.85 KB, patch)
2011-08-04 09:06 PDT, Fady Samuel
no flags
Patch (5.91 KB, patch)
2011-08-04 13:46 PDT, Fady Samuel
no flags
Fady Samuel
Comment 1 2011-08-04 09:06:43 PDT
Fady Samuel
Comment 2 2011-08-04 11:59:13 PDT
Tested on WebKit Mac + Chromium Mac + Chromium Linux.
Simon Fraser (smfr)
Comment 3 2011-08-04 12:33:34 PDT
Comment on attachment 102926 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=102926&action=review > Source/WebCore/rendering/RenderView.h:168 > + IntRect originalDocumentRect() const; I don't really like "original". Maybe "unscaled"?
Fady Samuel
Comment 4 2011-08-04 13:46:27 PDT
WebKit Review Bot
Comment 5 2011-08-04 15:00:34 PDT
Comment on attachment 102973 [details] Patch Clearing flags on attachment: 102973 Committed r92417: <http://trac.webkit.org/changeset/92417>
WebKit Review Bot
Comment 6 2011-08-04 15:00:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.