Source/WebCore: Background Does Not Scale Correctly with Page https://bugs.webkit.org/show_bug.cgi?id=65690

Reviewed by Simon Fraser.

Test: fast/repaint/background-scaling.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintRootBoxFillLayers):
* rendering/RenderView.cpp:
(WebCore::RenderView::unscaledDocumentRect):
(WebCore::RenderView::documentRect):
* rendering/RenderView.h:

LayoutTests: Background Does Not Scale Correctly with Page

Scaling is applied twice to the background (the paint area is doubly scaled).
This patch fixes this issue by passing the unscaled document rect to paintFillLayers
in paintRootBoxFillLayers.

https://bugs.webkit.org/show_bug.cgi?id=65690

Reviewed by Simon Fraser.

* fast/repaint/background-scaling-expected.png: Added.
* fast/repaint/background-scaling-expected.txt: Added.
* fast/repaint/background-scaling.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@92417 bbb929c8-8fbe-4397-9dbb-9b2b20218538