third_party/WebKit/Source/WebCore/rendering/RenderView.h
@@ -166,6 +166,8 @@ public:
     bool usesCompositing() const;
 #endif
 
+    IntRect unscaledDocumentRect() const;
+
     IntRect documentRect() const;
 
 #if ENABLE(CSS_REGIONS)
